--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,11 +12,11 @@
                             Account <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><%= link_to "Profile", current_user %></li>
+                            <li><%= link_to "Profile", user_path(current_user) %></li>
                             <li><%= link_to "Setttings", edit_user_path(current_user) %></li>
                             <li class="divider"></li>
                             <li>
-                                <%= link_to "tog out", logout_path, method:"delete" %>
+                                <%= link_to "log out", logout_path, method:"delete" %>
                             </li>
                         </ul>
                     </li>
