--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,11 +11,8 @@
             <%= f.label :email %>
             <%= f.text_field :email, class: 'form-control' %>
             
-            <%= f.label :password %>
-            <%= f.password_field :password, class: 'form-control' %>
-            
-            <%= f.label :password_confirmation, "Confirmation" %>
-            <%= f.password_field :password_confirmation, class: 'form-control' %>
+            <%= f.label :location %>
+            <%= f.text_field :location, class: 'form-control' %>
             
             <%= f.submit "Update my account", class: "btn btn-large btn-primary" %>
         <% end %>
