--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,14 +5,14 @@
 </h1>
 
         <div class="col-sm-4">
-            name：
+            名前：
             <span class="label label-info"><%= @user.name %></span>
         </div>
         <div class="col-sm-4">
-            email：
+            メールアドレス：
             <%= @user.email %>
         </div>
         <div class="col-sm-4">
-            location：
+            地域：
             <%= @user.location %>
         </div>
