--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
     <%= @user.name %>
 </h1>
 
+<div class="container">
+    <div class="row">
         <div class="col-sm-4">
             名前：
             <span class="label label-info"><%= @user.name %></span>
@@ -16,3 +18,6 @@
             地域：
             <%= @user.location %>
         </div>
+    </div>
+</div>    
+        
