--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,22 @@
-
-<h1>
-    <%= gravatar_for @user %>
-    <%= @user.name %>
-</h1>
-
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-            名前：
-            <span class="label label-info"><%= @user.name %></span>
-        </div>
-        <div class="col-sm-4">
-            メールアドレス：
-            <%= @user.email %>
-        </div>
-        <div class="col-sm-4">
-            地域：
-            <%= @user.location %>
-        </div>
+<div class="row">
+    <aside class="col-md-4">
+        <section class="user-info">
+            <h1>
+                <%= gravatar_for @user %>
+                <%= @user.name %>    
+            </h1>
+        </section>    
+    </aside>
+    <div lass="col-md-8">
+        <% if @user.microposts.any? %>
+            <h3>Microposts (<%= @user.microposts.count %>)</h3>
+            <ol class="microposts">
+                <%= render @microposts %>
+            </ol>
+        <% end %>    
     </div>
+</div>
 
-</div>    
+
+
 
