--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+
+
 <div class="row">
     <aside class="col-md-4">
         <section class="user-info">
@@ -18,6 +20,10 @@
     </div>
 </div>
 
+<%= link_to 'following', followings_user_path(@user) %>
+<%=  link_to 'follower', followers_user_path(@user) %>
 
-
-
+<h1 class="text-left">プロフィール</h1>
+<div class="text-left">名前：<%= @user.name %></div>
+<div class="text-left">メールアドレス：<%= @user.email %></div>
+<div class="text-left">地域：<%= @user.location %></div>
