--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -124,7 +124,7 @@ aside{
             margin-bottom: 3px;
             line-height: 1;
         }
-        hi{
+        h1{
             font-size: 1.4em;
             text-align: left;
             letter-spacing: -1px;
