--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,9 +1,9 @@
 <!-- <%= user.inspect %> -->
 
 
-  <div class="row" style="margin-bottom: 4px;">
+  <div class="row" style="margin: 10px 0;">
     <div class="col-xs-4"><%= gravatar_for user %></div>
-     <div class="col-xs-4">名前: <%= user.name %></div>
-     <div class="col-xs-4">地域: <%= user.location %></div>
+     <h4 class="col-xs-4" >名前: <%= user.name %></h4>
+     <h4 class="col-xs-4">地域: <%= user.location %></h4>
   </div>
 
