--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,12 @@
                 <%= render 'shared/micropost_form' %>
             </section>
         </aside>
+        <div class ="col-md-8">
+            <h3>Micropost Feed</h3>
+            <%= page_entries_info @feed_items %>
+            <%= render 'shared/feed' %>
+            <%= paginate(@feed_items) %>
+        </div>
     </div>
 <% else %>
     <div class="center jumbotron">
@@ -15,4 +21,4 @@
         
         <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
-    <% end %>
+<% end %>
