--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
         <h4 class="text-left"><%=  link_to 'follower', followers_user_path(@user) %></h4>
     </aside>
 
+    <%= page_entries_info @microposts %>
     <div class="col-md-8">
         <%= render 'follow_form' if logged_in? %>
         <% if @user.microposts.any? %>
@@ -26,9 +27,11 @@
             <ol class="microposts">
                 <%= render @microposts %>
             </ol>
-        <% end %>    
+        <% end %>  
     </div>
+    <%= paginate(@microposts) %>
 </div>
+
 
 
 
